--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ particle/particle.sln
 particle/particle.vcxproj
 particle/particle.vcxproj.filters
 particle/particle.vcxproj.user
+
+particle/bin
+particle/obj
+particle/.vs
